# arb-bot

./: .dockerignore  .gitignore  AGENT_NOTES.md  Cargo.toml  Dockerfile  QUICKSTART.md  README.md  clippy.toml  config.yaml  config_testnet.yaml  docker-compose.yaml  docker-compose.yml  healthcheck.sh  prometheus.yml  prompt.txt  run_testnet.sh  rust-toolchain.toml
crates/arb-adapters/: Cargo.toml
crates/arb-adapters/src/: binance.rs  hmac_util.rs  kraken.rs  lib.rs  okx.rs
crates/arb-backtest/: Cargo.toml
crates/arb-backtest/src/: lib.rs  metrics.rs  replay.rs  simulator.rs
crates/arb-backtest/tests/: determinism.rs
crates/arb-bin/: Cargo.toml
crates/arb-bin/src/: cli.rs  main.rs  ntp_check.rs  shutdown.rs
crates/arb-book/: Cargo.toml
crates/arb-book/src/: lib.rs  order_book.rs
crates/arb-config/: Cargo.toml
crates/arb-config/src/: loader.rs
crates/arb-core/: Cargo.toml
crates/arb-core/src/: error.rs  fee_model.rs  lib.rs  symbol_map.rs  types.rs
crates/arb-engine/: Cargo.toml
crates/arb-engine/src/: engine.rs  lib.rs  slippage_ewma.rs
crates/arb-exec/: Cargo.toml
crates/arb-exec/src/: inventory.rs  lib.rs  paper_executor.rs
crates/arb-live/: Cargo.toml
crates/arb-live/src/: balances.rs  binance_orders.rs  lib.rs  live_executor.rs  okx_orders.rs
crates/arb-live/tests/: bn_testnet.rs
crates/arb-log/: Cargo.toml
crates/arb-log/src/: logger.rs
crates/arb-metrics/: Cargo.toml
crates/arb-metrics/src/: exporter.rs
crates/arb-recording/: Cargo.toml
crates/arb-recording/src/: recorder.rs  replayer.rs
crates/arb-telegram/: Cargo.toml
crates/arb-telegram/src/: lib.rs
crates/arb-train/: Cargo.toml
crates/arb-train/src/: grid.rs  lib.rs  report.rs  sweep.rs
fixtures/: okx_book_snapshot.json  okx_book_updates.jsonl  sample_recording.jsonl
frontend/: app.js  index.html
frontend/sample_data/: paper_ledger.jsonl  run_report.json
lessons/: mistakes.md
run_artifacts/backtest_1bps/: run_report.json
run_artifacts/backtest_dual/: run_report.json
run_artifacts/backtest_fixtures/: run_report.json
run_artifacts/backtest_live/: run_report.json
run_artifacts/phase1/: build_log.txt  existing_files.txt  final_validation.txt  hermes_output.md  live_summary.md  okx_progress.json  okx_summary.md  progress.json
run_artifacts/sweep_0.5_100/: run_report.json
run_artifacts/sweep_0.5_1000/: run_report.json
run_artifacts/sweep_0.5_500/: run_report.json
run_artifacts/sweep_1.0_1000/: run_report.json
run_artifacts/sweep_1.0_500/: run_report.json
run_artifacts/sweep_2.0_100/: run_report.json
scripts/: extract_files.py  optimize_loop.sh  test_live.sh
src/: lib.rs
tests/: hmac_test.rs  okx_crc32.rs  recorder_test.rs
