[package]
name = "arb-adapters"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
arb-core = { workspace = true }
arb-book = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }
crc32fast = { workspace = true }
flume = { workspace = true }
chrono = { workspace = true }
ordered-float = { workspace = true }
