[package]
name = "arb-backtest"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
arb-core        = { workspace = true }
arb-book        = { workspace = true }
arb-engine      = { workspace = true }
arb-exec        = { workspace = true }
arb-config      = { workspace = true }
tokio           = { workspace = true }
serde           = { workspace = true }
serde_json      = { workspace = true }
serde_yaml      = { workspace = true }
anyhow          = { workspace = true }
ordered-float   = { workspace = true }
flume           = { workspace = true }
tracing         = { workspace = true }
tracing-subscriber = { workspace = true }
clap            = { workspace = true }
chrono          = { workspace = true }
flate2          = "1"
rayon           = { version = "1.10", optional = true }

[dev-dependencies]
pretty_assertions  = { workspace = true }
tempfile          = { workspace = true }

[[bin]]
name = "arb-backtest"
path = "src/bin/arb-backtest.rs"

[features]
default      = ["parallel"]
parallel     = ["dep:rayon"]
