[package]
name = "arb-bin"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[features]
default = []
live = ["arb-core/live"]

[dependencies]
arb-core = { workspace = true }
arb-book = { workspace = true }
arb-adapters = { workspace = true }
arb-engine = { workspace = true }
arb-exec = { workspace = true }
arb-log = { workspace = true }
arb-metrics = { workspace = true }
arb-recording = { workspace = true }
arb-config = { workspace = true }
arb-live = { workspace = true }
arb-train = { workspace = true }
arb-telegram = { workspace = true }
tokio = { workspace = true }
flume = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
tempfile = { workspace = true }
wiremock = { workspace = true }
