[package]
name = "arb-live"
version.workspace = true
edition = "2021"
rust-version.workspace = true

[dependencies]
arb-core       = { workspace = true }
arb-book       = { workspace = true }
arb-config     = { workspace = true }
arb-adapters   = { workspace = true }
serde          = { workspace = true }
serde_json     = { workspace = true }
reqwest        = { workspace = true }
tokio          = { workspace = true }
tokio-tungstenite = { workspace = true }
tracing        = { workspace = true }
anyhow         = { workspace = true }
thiserror      = { workspace = true }
chrono         = { workspace = true }
hmac           = { workspace = true }
sha2           = { workspace = true }
base64         = { workspace = true }
hex            = { workspace = true }
flume          = { workspace = true }
ordered-float  = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
wiremock = { workspace = true }
