[package]
name = "arb-metrics"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
arb-core = { workspace = true }
prometheus = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
