[package]
name = "arb-recording"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
arb-core = { workspace = true }
ordered-float = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
flume = { workspace = true }
