[package]
name = "arb-telegram"
version.workspace = true
edition = "2021"
rust-version.workspace = true

[dependencies]
reqwest        = { workspace = true }
serde          = { workspace = true }
serde_json     = { workspace = true }
tokio          = { workspace = true }
tracing        = { workspace = true }
anyhow         = { workspace = true }
